# wilbert-pumacay-graficos-2017-2

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
assignments/: CMakeLists.txt  Common.h  Config.h
assignments/assignment1/: CMakeLists.txt  README.md  editor_ear_clipping_test.cpp  main.cpp  tut_texture.cpp
assignments/assignment1/miniengine/: CMakeLists.txt  LMiniCommon.h
assignments/assignment1/miniengine/include/: LCamera3D.h  LLightSource.h  LMaterial.h  LScene.h
assignments/assignment1/miniengine/src/: LCamera3D.cpp  LMesh.cpp  LMeshBuilder.cpp  LScene.cpp
assignments/assignment1/res/shaders/: baseFragmentShader3d_with_lighting.glsl
assignments/assignment1/res/shaders/tests/: sample_texture_fs.glsl
assignments/assignment2/: CMakeLists.txt  LCommon.h  LIRenderable.h  LInputDefinitions.h  LMaterial.cpp  LMesh.cpp  LMesh.h  LSceneRenderer.cpp  LShaderManager.cpp  LShaderManager.h  LVertexBuffer.h  LWindow.h  README.md  main.cpp  main_6.cpp
assignments/assignment2/hw/: LBallEntity.h  LTestScene.h
assignments/assignment3/: CMakeLists.txt  LCommon.h  LFixedCamera3d.cpp  LICamera.h  LIRenderer.h  LIndexBuffer.h  LLightDirectional.h  LLightPoint.h  LLightSpot.h  LMaterial.cpp  LMaterial.h  LMesh.cpp  LMesh.h  LMeshBuilder.cpp  LMeshBuilder.h  LScene.cpp  LScene.h  LSceneRenderer.cpp  LSceneRenderer.h  LShader.cpp  LShaderBasic3d.h  LShaderLighting.h  LShaderManager.cpp  LShaderManager.h  LTexture.cpp  LTexture.h  LWindow.cpp  LWindow.h  README.md  main.cpp  main_bp.cpp
assignments/assignment3/hw/: LBallEntity.h  LTestScene.h
assignments/assignment3/res/shaders/: basic3d_lighting_fs_120.glsl  basic3d_lighting_textured_fs_120.glsl  basic3d_lighting_textured_vs_120.glsl  basic3d_lighting_vs_120.glsl
assignments/assignment4/: CMakeLists.txt  LAssetsManager.cpp  LAssetsManager.h  LCommon.h  LFpsCamera.cpp  LFpsCamera.h  LFrameBuffer.cpp  LFrameBuffer.h  LGpuTerrain.h  LHeightmapGenerator.cpp  LHeightmapGenerator.h  LICamera.cpp  LICamera.h  LILight.h  LIRenderable.h  LIRenderer.h  LInputDefinitions.h  LInputHandler.cpp  LInputHandler.h  LMesh.cpp  LMesh.h  LMeshBuilder.cpp  LMeshBuilder.h  LScene.cpp  LScene.h  LSceneRenderer.cpp  LSceneRenderer.h  LShader.h  LShaderEnvMapping.h  LShaderLighting.h  LShaderLightingShadows.h  LShaderManager.cpp  LShaderSkybox.h  LShaderTerrainPatch.h  LShadowMap.h  LTerrainGenerator.cpp  LTerrainGenerator.h  LTerrainPatch.cpp  LTerrainPatch.h  LVertexArray.h  (+8 more)
assignments/assignment4/hw/: LBallMovementComponent.h  LTestScene.h
assignments/assignment4/res/: LShaderShadowMap.h  LShadowMap.cpp
assignments/assignment4/res/shaders/: terrain_patch_fs_120.glsl  terrain_patch_vs_120.glsl
engine/: CMakeLists.txt
engine/src/core/: LBaseApp.cpp
